RESOLVED FIXED128712
Return immediately from DestroyPlugin IPC call
https://bugs.webkit.org/show_bug.cgi?id=128712
Summary Return immediately from DestroyPlugin IPC call
Antti Koivisto
Reported 2014-02-12 17:54:21 PST
Don't unnecessarily wait for plugin termination.
Attachments
patch (3.96 KB, patch)
2014-02-12 18:07 PST, Antti Koivisto
andersca: review+
Antti Koivisto
Comment 1 2014-02-12 18:07:36 PST
WebKit Commit Bot
Comment 2 2014-02-12 18:08:14 PST
Attachment 224037 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:15: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-02-12 21:45:48 PST
Comment on attachment 224037 [details] patch Sure, let's try this. If we see any fallout we can either: 1. Limit by plug-in type. 2. Only do this when we're certain that the plug-in isn't playing any audio, showing ui, etc.
Antti Koivisto
Comment 4 2014-02-12 21:59:55 PST
Note You need to log in before you can comment on or make changes to this bug.